# register.pacificyearlymeeting.org

./: .gitignore  Dockerfile  README.md  manage.py  pyproject.toml  scratchpad.md
accommodations/: admin.py  models.py
accommodations/migrations/: 0001_initial.py  0002_accommodationprice.py  0002_auto_20200201_2015.py  0003_auto_20200131_1538.py  0003_delete_accommodationprice.py  0004_auto_20200131_1922.py
accounts/: models.py
accounts/migrations/: 0001_initial.py
age_groups/: admin.py  apps.py  models.py
age_groups/migrations/: 0001_initial.py
dietary_needs/: admin.py  apps.py  models.py
dietary_needs/migrations/: 0001_initial.py  0002_mealoption.py
event_days/: admin.py  apps.py  models.py
event_days/migrations/: 0001_initial.py
fees/: admin.py  models.py
fees/migrations/: 0001_initial.py  0002_accommodationprice.py  0003_auto_20200201_2037.py  0004_auto_20200201_2037.py  0005_accommodationfee_full_week_fee.py  0006_auto_20200201_2049.py  0007_auto_20200201_2050.py  0008_auto_20200201_2117.py
food/: admin.py  models.py
food/migrations/: 0001_initial.py
home/migrations/: 0001_initial.py
payments/: admin.py  models.py
payments/migrations/: 0001_initial.py  0002_allocation_registrant.py  0002_registrantpayment.py  0003_registrantpayment_amount.py  0004_payment_payee.py  0005_auto_20200113_1651.py  0006_payment_source.py  0007_auto_20200113_1736.py  0008_auto_20200131_1428.py  0009_auto_20200131_1430.py  (+3 more)
programs/: admin.py  models.py
pym_registration/: urls.py  wsgi.py
registration/: admin.py  forms.py  models.py  widgets.py
(+27 files in other folders)
