[tool.poetry]
name = "register.pacificyearlymeeting.org"
version = "0.1.0"
description = "Registration portal for Pacific Yearly Meeting."
authors = ["Brylie Christopher Oxley <brylie@amble.fi>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
wagtail = "^2.7"
django-registration = "^3.0.1"
django-crispy-forms = "^1.8.1"
wagtailfontawesome = "^1.1.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
